Minor design changes for better view
fix #6

--- a/app/src/main/res/layout/exercise_fragment_layout.xml
+++ b/app/src/main/res/layout/exercise_fragment_layout.xml
@@ -25,6 +25,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/exercise_name" />
 
+        <View
+            android:id="@+id/view2"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            tools:layout_editor_absoluteY="449dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/exercise_name"/>
+
         <EditText
             android:id="@+id/exercise_name"
             android:layout_width="wrap_content"
@@ -81,13 +91,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_button"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:text="@string/set_1"
-            android:textSize="24sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view" />
@@ -96,7 +106,6 @@
             android:id="@+id/set_1_reps"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="number"
@@ -107,14 +116,13 @@
             android:textSize="14sp"
             android:theme="@style/MyEditTextTheme"
             app:layout_constraintEnd_toStartOf="@+id/set_1"
-            app:layout_constraintTop_toBottomOf="@+id/view" />
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <EditText
             android:id="@+id/set_1_weight"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
             android:ems="10"
             android:inputType="numberDecimal"
             android:maxLength="6"
@@ -124,20 +132,20 @@
             android:textSize="14sp"
             android:theme="@style/MyEditTextTheme"
             app:layout_constraintStart_toEndOf="@+id/set_1"
-            app:layout_constraintTop_toBottomOf="@+id/view" />
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <TextView
             android:id="@+id/set_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_button"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:text="@string/set_2"
-            android:textSize="24sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/set_1" />
@@ -146,7 +154,7 @@
             android:id="@+id/set_2_reps"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="number"
@@ -164,7 +172,7 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:ems="10"
             android:inputType="numberDecimal"
             android:maxLength="6"
@@ -181,13 +189,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_button"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:text="@string/set_3"
-            android:textSize="24sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/set_2" />
@@ -196,7 +204,7 @@
             android:id="@+id/set_3_reps"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="number"
@@ -214,7 +222,7 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:ems="10"
             android:inputType="numberDecimal"
             android:maxLength="6"
@@ -231,13 +239,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_button"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:text="@string/set_4"
-            android:textSize="24sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/set_3" />
@@ -246,7 +254,7 @@
             android:id="@+id/set_4_reps"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="number"
@@ -264,7 +272,7 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:ems="10"
             android:inputType="numberDecimal"
             android:maxLength="6"
@@ -281,13 +289,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_button"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:text="@string/set_5"
-            android:textSize="24sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/set_4" />
@@ -296,7 +304,7 @@
             android:id="@+id/set_5_reps"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
             android:inputType="number"
@@ -314,7 +322,7 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:ems="10"
             android:inputType="numberDecimal"
             android:maxLength="6"
@@ -330,27 +338,25 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/rounded_button"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text="@string/repetitions"
-            app:layout_constraintEnd_toStartOf="@+id/set_1_reps"
-            app:layout_constraintTop_toTopOf="@+id/set_1_reps" />
+            android:textColor="@color/DayNightColor"
+            app:layout_constraintEnd_toStartOf="@+id/set_1"
+            app:layout_constraintTop_toBottomOf="@+id/view" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/rounded_button"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:text="@string/weight"
-            app:layout_constraintStart_toEndOf="@+id/set_1_weight"
-            app:layout_constraintTop_toTopOf="@+id/set_1_weight" />
+            android:textColor="@color/DayNightColor"
+            app:layout_constraintStart_toEndOf="@+id/set_1"
+            app:layout_constraintTop_toBottomOf="@+id/view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
