Fixes exercise list fragment logic and exercise fragment logic, adds new viewmodel for exercise

--- a/app/src/main/res/layout/exercise_fragment_layout.xml
+++ b/app/src/main/res/layout/exercise_fragment_layout.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.thedistantblue.triaryapp.viewmodels.ExerciseViewModel" />
+            type="com.thedistantblue.triaryapp.viewmodels.ExerciseViewModelNew" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -79,6 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:text="@string/save"
+            android:onClick="@{() -> viewModel.save()}"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:backgroundTint="@color/DayNightColor"
@@ -110,7 +111,7 @@
             android:ems="10"
             android:inputType="number"
             android:maxLength="2"
-            android:text="@={viewModel.firstSetReps}"
+            android:text="@={viewModel.firstSet.repetitions}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
@@ -126,7 +127,7 @@
             android:ems="10"
             android:inputType="numberDecimal"
             android:maxLength="6"
-            android:text="@={viewModel.firstSetWeight}"
+            android:text="@={viewModel.firstSet.weight}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
@@ -159,7 +160,7 @@
             android:ems="10"
             android:inputType="number"
             android:maxLength="2"
-            android:text="@={viewModel.secondSetReps}"
+            android:text="@={viewModel.secondSet.repetitions}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
@@ -176,7 +177,7 @@
             android:ems="10"
             android:inputType="numberDecimal"
             android:maxLength="6"
-            android:text="@={viewModel.secondSetWeight}"
+            android:text="@={viewModel.secondSet.weight}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
@@ -209,7 +210,7 @@
             android:ems="10"
             android:inputType="number"
             android:maxLength="2"
-            android:text="@={viewModel.thirdSetReps}"
+            android:text="@={viewModel.thirdSet.repetitions}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
@@ -226,7 +227,7 @@
             android:ems="10"
             android:inputType="numberDecimal"
             android:maxLength="6"
-            android:text="@={viewModel.thirdSetWeight}"
+            android:text="@={viewModel.thirdSet.weight}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
@@ -259,7 +260,7 @@
             android:ems="10"
             android:inputType="number"
             android:maxLength="2"
-            android:text="@={viewModel.fourthSetReps}"
+            android:text="@={viewModel.fourthSet.repetitions}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
@@ -276,7 +277,7 @@
             android:ems="10"
             android:inputType="numberDecimal"
             android:maxLength="6"
-            android:text="@={viewModel.fourthSetWeight}"
+            android:text="@={viewModel.fourthSet.weight}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
@@ -309,7 +310,7 @@
             android:ems="10"
             android:inputType="number"
             android:maxLength="2"
-            android:text="@={viewModel.fifthSetReps}"
+            android:text="@={viewModel.fifthSet.repetitions}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
@@ -326,7 +327,7 @@
             android:ems="10"
             android:inputType="numberDecimal"
             android:maxLength="6"
-            android:text="@={viewModel.fifthSetWeight}"
+            android:text="@={viewModel.fifthSet.weight}"
             android:textAlignment="center"
             android:textColor="@color/DayNightColor"
             android:textSize="14sp"
