--- a/app/src/main/res/layout/exercise_item_card.xml
+++ b/app/src/main/res/layout/exercise_item_card.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.thedistantblue.triaryapp.viewmodels.ExerciseViewModel" />
+            type="com.thedistantblue.triaryapp.viewmodels.ExerciseCardViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
