--- a/app/src/main/res/layout/training_creation_fragment_layout.xml
+++ b/app/src/main/res/layout/training_creation_fragment_layout.xml
@@ -22,6 +22,7 @@
         android:text="@string/save"
         android:textColor="@android:color/black"
         android:textSize="18sp"
+        android:onClick="@{() -> viewModel.save()}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
