--- a/app/src/main/res/layout/training_item_card.xml
+++ b/app/src/main/res/layout/training_item_card.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.thedistantblue.triaryapp.viewmodels.TrainingViewModel" />
+            type="com.thedistantblue.triaryapp.viewmodels.TrainingCardViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -39,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:text="@{viewModel.training.trainingName}"
+                    android:text="@{viewModel.trainingName}"
                     android:textColor="@color/textColor"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
