--- a/app/src/main/res/layout/main_screen_tab_layout.xml
+++ b/app/src/main/res/layout/main_screen_tab_layout.xml
@@ -3,12 +3,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:tabTextColor="@android:color/white"
+        app:tabBackground="@drawable/tab_background"
+        app:tabIndicatorColor="@color/DayNightColor"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager"
