Fixes running list and creation, minor overall refactoring
refs #12

--- a/app/src/main/res/layout/running_item_card.xml
+++ b/app/src/main/res/layout/running_item_card.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.thedistantblue.triaryapp.viewmodels.RunningViewModel" />
+            type="com.thedistantblue.triaryapp.viewmodels.RunningCardViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
