--- a/app/src/main/res/navigation/triaryapp_navigation.xml
+++ b/app/src/main/res/navigation/triaryapp_navigation.xml
@@ -7,7 +7,7 @@
 
     <activity
         android:id="@+id/mainScreenActivity"
-        android:name="com.thedistantblue.triaryapp.mainscreen.MainScreenActivity"
+        android:name="com.thedistantblue.triaryapp.mainscreen.MainScreenActivityImpl"
         android:label="main_screen_relative_layout"
         tools:layout="@layout/main_screen_relative_layout" />
     <fragment
