--- a/app/src/main/res/layout/running_fragment_layout.xml
+++ b/app/src/main/res/layout/running_fragment_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
@@ -84,43 +85,11 @@
             app:layout_constraintStart_toStartOf="@+id/running_distance"
             app:layout_constraintTop_toBottomOf="@+id/running_distance" />
 
-        <TextView
-            android:id="@+id/running_speed"
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:ems="10"
-            android:text="@{viewModel.runningSpeed}"
-            android:textAlignment="center"
-            android:textColor="@color/DayNightColor"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/running_distance" />
-        <View
-            android:id="@+id/running_speed_bottom_line"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"
-            app:layout_constraintEnd_toEndOf="@+id/running_speed"
-            app:layout_constraintStart_toStartOf="@+id/running_speed"
-            app:layout_constraintTop_toBottomOf="@+id/running_speed" />
-
-        <TextView
-            android:id="@+id/running_speed_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/speed"
-            android:textColor="@android:color/darker_gray"
-            app:layout_constraintEnd_toEndOf="@+id/running_speed_bottom_line"
-            app:layout_constraintStart_toStartOf="@+id/running_speed_bottom_line"
-            app:layout_constraintTop_toBottomOf="@+id/running_speed_bottom_line" />
-
         <EditText
-            android:id="@+id/running_time"
-            android:layout_width="70dp"
+        android:id="@+id/running_time"
+        android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             android:ems="10"
             android:inputType="numberDecimal"
             android:maxLength="10"
@@ -143,38 +112,6 @@
             app:layout_constraintStart_toStartOf="@+id/running_time"
             app:layout_constraintTop_toBottomOf="@+id/running_time" />
 
-        <TextView
-            android:id="@+id/running_calories"
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="16dp"
-            android:ems="10"
-            android:text="@{viewModel.runningCalories}"
-            android:textAlignment="center"
-            android:textColor="@color/DayNightColor"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/running_distance" />
-        <View
-            android:id="@+id/running_calories_bottom_line"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"
-            app:layout_constraintEnd_toEndOf="@+id/running_calories"
-            app:layout_constraintStart_toStartOf="@+id/running_calories"
-            app:layout_constraintTop_toBottomOf="@+id/running_calories" />
-
-        <TextView
-            android:id="@+id/running_calories_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/calories_lost"
-            android:textColor="@android:color/darker_gray"
-            app:layout_constraintEnd_toEndOf="@+id/running_calories_bottom_line"
-            app:layout_constraintStart_toStartOf="@+id/running_calories_bottom_line"
-            app:layout_constraintTop_toBottomOf="@+id/running_calories_bottom_line" />
-
         <EditText
             android:id="@+id/running_comments"
             android:layout_width="wrap_content"
@@ -190,6 +127,34 @@
             app:layout_constraintBottom_toTopOf="@+id/running_date_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <EditText
+            android:id="@+id/running_speed"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:ems="10"
+            android:inputType="numberDecimal"
+            android:maxLength="10"
+            android:text="@={viewModel.runningSpeed}"
+            android:textAlignment="center"
+            android:textColor="@color/DayNightColor"
+            android:textSize="24sp"
+            android:theme="@style/MyEditTextTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/running_time_text" />
+
+        <TextView
+            android:id="@+id/running_speed_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/speed"
+            android:textColor="@android:color/darker_gray"
+            app:layout_constraintEnd_toEndOf="@+id/running_speed"
+            app:layout_constraintStart_toStartOf="@+id/running_speed"
+            app:layout_constraintTop_toBottomOf="@+id/running_speed" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
