--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="colorPrimaryDark">@color/backgroundColor</item>
         <item name="android:colorBackground">@color/backgroundColor</item>
         <item name="android:navigationBarColor">@android:color/black</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
     </style>
 
     <style name="DarkTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -28,6 +29,11 @@
         <item name="android:colorControlNormal">@color/editTextColor</item>
         <item name="android:colorControlActivated">@android:color/white</item>
         <item name="android:colorControlHighlight">@android:color/white</item>
+    </style>
+
+    <style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@color/textColor</item>
     </style>
 
 </resources>
