--- a/app/src/main/res/layout/main_screen_relative_layout.xml
+++ b/app/src/main/res/layout/main_screen_relative_layout.xml
@@ -35,7 +35,7 @@
             android:orientation="vertical"
             app:defaultNavHost="true"
             app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
-            <!--app:navGraph="@navigation/nav_graph"-->
+            <!--app:navGraph="@navigation/main_nav_graph"-->
 
     </RelativeLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
