--- a/app/src/main/res/layout/training_list_training_creation_dialog_layout.xml
+++ b/app/src/main/res/layout/training_list_training_creation_dialog_layout.xml
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:textColorHint="@color/textColor"
+        android:textColorHint="@color/DayNightColor"
         app:hintTextColor="@color/DayNightColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,8 @@
             android:layout_height="wrap_content"
             android:background="@color/backgroundColor"
             android:hint="@string/training_list_training_creation_dialog_name_input_hint"
-            android:textColor="@color/textColor" />
+            android:textColor="@color/textColor"
+            android:maxLength="20" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -55,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:textColorHint="@color/textColor"
+        android:textColorHint="@color/DayNightColor"
         app:hintTextColor="@color/DayNightColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +67,8 @@
             android:layout_height="wrap_content"
             android:background="@color/backgroundColor"
             android:hint="@string/training_list_training_creation_dialog_description_input_hint"
-            android:textColor="@color/textColor" />
+            android:textColor="@color/textColor"
+            android:maxLength="20" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.constraintlayout.widget.Guideline
